--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- css -->
     <link rel="stylesheet" href="./css/styles.css">
     <!-- js -->
-    <script src="./js/index.js"></script>
+    <script src="./js/index.js" defer></script>
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -49,7 +49,7 @@
         </section>
 
         <section class="phrases-container">
-            <button id="btn-phrases">Ler uma frase</button>
+            <button id="btn-phrases" onclick="loadPhrase()">Ler uma frase</button>
             <p id="phrase"></p>
 
         </section>
